# mp3gain

./: CMakeLists.txt  CMakePresets.json  README.md
mp3gain/: mp3gain.c  mp3gain.h
